--- a/style.css
+++ b/style.css
@@ -1,68 +1,79 @@
+/* Revert all properties, then override with !important to prevent sites from overriding these styles */
+#tabswitcher, #tabswitcher * {
+	all: revert;
+}
+
 #tabswitcher {
-	background-color: white;
-	position: fixed;
-	left: 50%;
-	top: 75px;
-	transform: translateX(-50%);
-	padding: 5px 15px;
-	border-radius: 2px;
 	display: none;
-	width: 500px;
-	max-width: 100%;
-	z-index: 999999;
-	font-size: 14px;
+	background-color: white     !important;
+	position: fixed             !important;
+	left: 50%                   !important;
+	top: 75px                   !important;
+	transform: translateX(-50%) !important;
+	padding: 5px 15px           !important;
+	border-radius: 2px          !important;
+	width: 500px                !important;
+	max-width: 100%             !important;
+	z-index: 999999             !important;
+	font-size: 14px             !important;
+	line-height: 25px           !important;
 	box-shadow:
 		5px  5px 5px rgba(0, 0, 0, 0.2),
-		-5px 5px 5px rgba(0, 0, 0, 0.2);
+		-5px 5px 5px rgba(0, 0, 0, 0.2)
+		!important;
 }
 
 #tabswitcher-input {
-	all: revert;
-	background-color: #F0F0F4;
-	border: 1px solid #3DAEE9;
-	outline: none;
-	color: black;
-	border-radius: 2px;
-	padding: 5px;
-	margin-bottom: 5px;
-	width: 100%;
-	box-sizing: border-box;
-	font-family: sans-serif;
+	background-color: #F0F0F4 !important;
+	border: 1px solid #3DAEE9 !important;
+	outline: none             !important;
+	color: black              !important;
+	border-radius: 2px        !important;
+	padding: 5px              !important;
+	margin: 5px 0             !important;
+	width: 100%               !important;
+	box-sizing: border-box    !important;
+	font-family: sans-serif   !important;
 }
 
 .tabswitcher-item {
-	display: flex;
-	align-items: center;
-	gap: 5px;
-	margin: 5px;
-	min-width: 0;
+	display: flex       !important;
+	align-items: center !important;
+	gap: 5px            !important;
+	margin: 5px         !important;
+	min-width: 0        !important;
 }
 
 .tabswitcher-icon {
-	width: 1em;
-	height: 1em;
-	flex-shrink: 0;
+	width: 14px    !important;
+	height: 14px   !important;
+	flex-shrink: 0 !important;
 }
 
 .tabswitcher-title {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+	overflow: hidden        !important;
+	text-overflow: ellipsis !important;
+	white-space: nowrap     !important;
+	color: black            !important;
 }
 
 #tabswitcher-info {
-	font-size: 12px;
-	color: #BDBDBD;
-	text-align: center;
+	font-size: 12px    !important;
+	color: #BDBDBD     !important;
+	text-align: center !important;
 }
 
 @media (prefers-color-scheme: dark) {
 	#tabswitcher {
-		background-color: #3D3C42;
+		background-color: #3D3C42 !important;
 	}
 
 	#tabswitcher-input {
-		background-color: #1C1B22;
-		color: white;
+		background-color: #1C1B22 !important;
+		color: white              !important;
+	}
+
+	.tabswitcher-title {
+		color: white              !important;
 	}
 }
