--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	left: 50%                   !important;
 	top: 75px                   !important;
 	transform: translateX(-50%) !important;
-	padding: 5px 15px           !important;
+	padding: 5px 0              !important;
 	border-radius: 2px          !important;
 	width: 500px                !important;
 	max-width: 100%             !important;
@@ -30,8 +30,8 @@
 	color: black              !important;
 	border-radius: 2px        !important;
 	padding: 5px              !important;
-	margin: 5px 0             !important;
-	width: 100%               !important;
+	margin: 5px 15px          !important;
+	width: calc(100% - 30px)  !important;
 	box-sizing: border-box    !important;
 	font-family: sans-serif   !important;
 }
@@ -39,8 +39,13 @@
 .tabswitcher-item {
 	display: flex       !important;
 	align-items: center !important;
-	margin: 5px         !important;
+	padding: 0 15px     !important;
+	margin: 5px 0       !important;
 	min-width: 0        !important;
+}
+
+.tabswitcher-item.tabswitcher-selected {
+	background-color: #3393C2 !important;
 }
 
 .tabswitcher-icon {
@@ -50,16 +55,20 @@
 	flex-shrink: 0    !important;
 }
 
-.tabswitcher-title, .tabswitcher-highlight {
+.tabswitcher-title {
 	overflow: hidden        !important;
 	text-overflow: ellipsis !important;
 	white-space: nowrap     !important;
 	color: black            !important;
 }
 
+.tabswitcher-selected .tabswitcher-title {
+	color: white !important;
+}
+
 .tabswitcher-highlight {
-	color: white            !important;
-	background-color: black !important;
+	color: black            !important;
+	background-color: white !important;
 	border-radius: 3px      !important;
 }
 
@@ -81,10 +90,5 @@
 
 	.tabswitcher-title {
 		color: white !important;
-	}
-
-	.tabswitcher-highlight {
-		color: black            !important;
-		background-color: white !important;
 	}
 }
